adds tie element to fistFight function

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,10 @@
     <title></title>
   </head>
   <body>
-    
+    <h1>Welcome to High School</h1>
+    <form>
+      <label for="name-input">Character name:</label>
+      <input type="text" id="name-input">
+    </form>
   </body>
 </html>
